--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="banner">
             <div class="cover">
                 <div class="row">
-                    <h1>CINEMA!</h1>
+                    <h1 id="header">CINEMA!</h1>
                 </div>
             </div>
         </div>
