added intro part

--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
         </div>
     </div>
 
-        <div class="row">
+        <div class="row" id="intro">
             <h1>WELCOME TO THE CINEMA</h1>
 
             <h3>Please Select A Movie</h3>
-            </div>div>
+            <p>Select one of the movies from the list</p>
+
+            </div>
+
+            <div class="row">
+                
+
+
 
             
 
