--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@
                                                                 </div> 
                                                       
                 </div>
-     <!--form-->   
+
+
+                <hr>
+     <!--form-->  
+     <div class="row">
+         <div class="col-sm-4 id="form"> 
           <form>
               <div class="form-group mx-sm-3 mb-2">
                   <label for="movieInput">Movie</label>
@@ -110,6 +115,8 @@
 
               <button type="submit" class="btn btn-primary">Submit</button>
           </form>
+         </div>
+     </div>
 
 
 
