--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
           </form>
      </div>
 
+     <!---footer-->
+     <footer class="footer"><footer class="footer">
+            <p>Posted by: Njenga Karori </p>
+            <p>Contact information: <a href="njenga.k11@gmail.com">
+            njenga.k11@gmail.com"</a></p>
+            </footer>
+            
+
+
+
 
 
 
