--- a/index.html
+++ b/index.html
@@ -115,13 +115,17 @@
               <button type="submit" class="btn btn-primary">Submit</button>
           </form>
      </div>
-
+<br>
+<br>
+<hr>
      <!---footer-->
-     <footer class="footer"><footer class="footer">
+     <div>
+     <footer class="footer">
             <p>Posted by: Njenga Karori </p>
             <p>Contact information: <a href="njenga.k11@gmail.com">
             njenga.k11@gmail.com"</a></p>
             </footer>
+        </div>
             
 
 
